--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,6 +1,55 @@
 [package]
 name = "palette"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+default-run = "palette"
+
+[workspace]
+members = [".", "migration"]
 
 [dependencies]
+# Web framework
+axum = { version = "0.8.4", features = ["macros", "ws", "multipart"] }
+axum-extra = { version = "0.12.1", features = ["cookie", "typed-header"] }
+async-trait = "0.1.88"
+tokio = { version = "1.47.0", features = ["full"] }
+tower = "0.5.2"
+tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
+
+# Database
+sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
+sea-orm-migration = "1.1.19"
+migration = { path = "migration" }
+redis = { version = "0.32.7", features = ["tokio-comp"] }
+
+# Serialization
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.141"
+
+# Authentication & Security
+axum-jwt-auth = "0.5.1"
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
+bcrypt = "0.17.0"
+uuid = { version = "1.17.0", features = ["v7", "serde"] }
+
+# Time
+chrono = { version = "0.4.41", features = ["serde"] }
+
+# Email
+lettre = { version = "0.11.18", features = ["tokio1-native-tls"] }
+
+# Environment
+dotenvy = "0.15.7"
+
+# Logging
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+
+# Error handling
+thiserror = "2.0.12"
+
+# Validation
+validator = { version = "0.20.0", features = ["derive"] }
+
+# Random
+rand = "0.9.2"
