--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,7 +17,7 @@ tower = "0.5.2"
 tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
 
 # Database
-sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
+sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-rust_decimal"] }
 sea-orm-migration = "1.1.19"
 migration = { path = "migration" }
 redis = { version = "0.32.7", features = ["tokio-comp"] }
@@ -25,6 +25,7 @@ redis = { version = "0.32.7", features = ["tokio-comp"] }
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
+rust_decimal = { version = "1.36.0", features = ["serde"] }
 
 # Authentication & Security
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
@@ -52,3 +53,6 @@ validator = { version = "0.20.0", features = ["derive"] }
 
 # Random
 rand = "0.9.2"
+
+# Outgoing HTTP (pricing fetch)
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
