--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.77",
+    "@iconify-json/mdi": "^1.2.3",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.19.1",
     "@vitejs/plugin-vue": "^6.0.1",
@@ -36,6 +38,8 @@
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.9.0",
+    "unplugin-icons": "^22.5.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3",
     "vue-tsc": "^3.1.1"
