--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -55,4 +55,7 @@ validator = { version = "0.20.0", features = ["derive"] }
 rand = "0.9.2"
 
 # Outgoing HTTP (pricing fetch)
-reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
+eventsource-stream = "0.2.3"
+futures = "0.3.31"
+tokio-stream = "0.1.17"
