fix: fix wrong path

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ PORT=3000
 # Database
 DATABASE_URL=postgres://user:password@localhost:5432/database_name
 
-# JWT Settings
+# JWT Settings (Relative to backend/)
 JWT_PRIVATE_KEY_PATH=backend/keys/private_key.pem
 JWT_PUBLIC_KEY_PATH=backend/keys/public_key.pem
 JWT_EXPIRES_IN=86400
